--- a/index.css
+++ b/index.css
@@ -1,13 +1,15 @@
-*{
+* {
     margin: 0;
     padding: 0;
 }
-html,body {
+
+html,
+body {
     width: 100%;
     height: 100%;
 }
 
-.wrapper{
+.wrapper {
     position: fixed;
     top: 0;
     left: 0;
@@ -17,11 +19,11 @@ html,body {
     background-size: 100% 100%;
 }
 
-.wrapper .startBtn{
+.wrapper .startBtn {
     position: absolute;
     left: 50px;
-    width: 170px; 
-    height: 140px; 
+    width: 170px;
+    height: 140px;
     background-image: url(./img/startGame.png);
     background-size: 100% 100%;
     cursor: pointer;
@@ -54,7 +56,7 @@ html,body {
     box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.3);
 }
 
-.wrapper .box .block{
+.wrapper .box .block {
     width: 49px;
     height: 49px;
     border-right: 1px solid #b25f27;
@@ -63,17 +65,20 @@ html,body {
     background-image: url(./img/cao.jpg);
     box-shadow: 0 0 4px #333 inset;
 }
-.wrapper .box .num{
+
+.wrapper .box .num {
     background: #ecd0a1;
     line-height: 49px;
     text-align: center;
     font-size: 18px;
     font-weight: bold;
 }
-.wrapper .box .flag{
+
+.wrapper .box .flag {
     background-image: url(./img/hongqi.jpg);
     background-size: 100% 100%;
 }
+
 .wrapper .alertBox {
     display: none;
     position: absolute;
@@ -83,7 +88,8 @@ html,body {
     height: 100%;
     background: rgba(0, 0, 0, 0.2);
 }
-.wrapper .alertBox .alertImg{
+
+.wrapper .alertBox .alertImg {
     position: absolute;
     top: 0;
     left: 0;
@@ -96,7 +102,8 @@ html,body {
     border-radius: 20px;
     /* background-image: url(img/success.png); */
 }
-.wrapper .alertBox .alertImg .close{
+
+.wrapper .alertBox .alertImg .close {
     position: absolute;
     top: 0;
     right: 0;
